--- a/apply/index.html
+++ b/apply/index.html
@@ -32,7 +32,9 @@
     </style>
 </head>
 <body>
+<div id="grad">
 <title>Apply</title>
 	<span class="bigText">Test</span>
+	</div>
 </body>
 </html>
