--- a/apply/index.html
+++ b/apply/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+<link rel="icon" 
+      type="image/png" 
+      href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
+<title>RaidMC</title>
      <style>
         body {
            -moz-transform: scale(0.5, 0.5);
@@ -33,8 +37,7 @@
 </head>
 <body>
 <div id="grad">
-<title>Apply</title>
-	<span class="bigText">Test</span>
-	</div>
+	<div class="bigText">Hello World!</div>
+</div>
 </body>
 </html>
