--- a/apply/index.html
+++ b/apply/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" 
       type="image/png" 
       href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
-<title>RaidMC</title>
+<title>Apply</title>
      <style>
         body {
            -moz-transform: scale(0.5, 0.5);
