--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 	   font-size: 50px;
 	   font-weight:bold;
 	   }
+	   .buttonText{
+	   font-size: 50px;
+	   font-weight:bold;
+	   color:grey;
+	   }
 }
     </style>
 </head>
@@ -36,6 +41,7 @@
 	<img src="Minecraft.jpg" alt="Minecraft" class="center">
 	<div class="mediumText">Play At: Raidmc.xyz</div>
 	<div class="mediumText">Latest Version</div>
+	 <button onclick="window.location.href = 'https://raidmc.xyz/apply/';"><div class="buttonText">Apply For Whitelist</div></button>
 </div>
 </body>
 </html>
