--- a/apply/index.html
+++ b/apply/index.html
@@ -37,7 +37,10 @@
 </head>
 <body>
 <div id="grad">
-	<div class="bigText">Hello World!</div>
+	<div class="bigText">Apply For Whitelist</div>
+	<div class="mediumText">DM Me On Discord To Apply:</div>
+	<div class="mediumText">++(Nebula)++#0001 On Discord</div>
+	<img src="discordlogo.png" alt="discordlogo" class="center">
 </div>
 </body>
 </html>
