--- a/apply/index.html
+++ b/apply/index.html
@@ -40,8 +40,8 @@
 	<div class="bigText">Apply For Whitelist</div>
 	<div class="mediumText">DM Me On Discord To Apply:</div>
 	<div class="mediumText">++(Nebula)++#0001 On Discord</div>
-	<img src="discordlogo.png" alt="discordlogo" class="center"><br>
-	<iframe src="https://discordapp.com/widget?id=605887423557140540&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+	<img src="discordlogo.png" alt="discordlogo" class="center">
+	<iframe src="https://discordapp.com/widget?id=605887423557140540&theme=dark" width="700" height="1000" allowtransparency="true" frameborder="0"></iframe>
 </div>
 </body>
 </html>
