--- a/apply/index.html
+++ b/apply/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<script>
-var host = "raidmc.xyz/apply/";
+var host = "raidmc.xyz";
 if ((host == window.location.host) && (window.location.protocol != "https:"))
     window.location.protocol = "https";
 </script>
