--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 	<img src="Minecraft.jpg" alt="Minecraft" class="center">
 	<div class="mediumText">Play At: Raidmc.xyz</div>
 	<div class="mediumText">Latest Version</div>
-	 <button onclick="window.location.href = 'https://raidmc.xyz/apply/';"><div class="buttonText">Apply For Whitelist</div></button>
+	 <button onclick="window.location.href = 'https://raidmc.xyz/apply/';"><div class="buttonText">Apply For Whitelist</div></button><br>
+	<script src="https://apis.google.com/js/platform.js"></script>
+
+<div class="g-ytsubscribe" data-channelid="UC2hfq7CNKASzIZGzLktreuA" data-layout="full" data-count="default"></div>
 </div>
 </body>
 </html>
