--- a/contact/index.html
+++ b/contact/index.html
@@ -1,11 +1,47 @@
+<html>
+<head>
 	<script>
 var host = "raidmc.xyz";
 if ((host == window.location.host) && (window.location.protocol != "https:"))
     window.location.protocol = "https";
 </script>
-
-<!-- modify this form HTML and place wherever you want your form -->
-
+<link rel="icon" 
+      type="image/png" 
+      href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
+<title>Contact</title>
+     <style>
+        body {
+           -moz-transform: scale(0.5, 0.5);
+           zoom: 0.5;
+           zoom: 50%;
+           /*background-color: black;*/
+		   
+           text-align: center;
+           color: white;
+           font-family: Arial, Helvetica, sans-serif;
+       }
+	   #grad {
+	   height: 100%;
+       background: linear-gradient(to top right, #000066 0%, #ff99cc 100%)
+	   }
+	   .bigText{
+	   font-size: 100px;
+	   font-weight:bold;
+	   }
+	   .mediumText{
+	   font-size: 50px;
+	   font-weight:bold;
+	   }
+	   .buttonText{
+	   font-size: 50px;
+	   font-weight:bold;
+	   color:grey;
+	   }
+}
+    </style>
+</head>
+<body>
+<div id="grad">
 <form
   action="https://formspree.io/xrgyewrj"
   method="POST"
@@ -23,3 +59,6 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 
   <button type="submit">Send</button>
 </form>
+</div>
+</body>
+</html>
