--- a/contact/index.html
+++ b/contact/index.html
@@ -10,10 +10,6 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
       href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
 <title>Contact</title>
      <style>
-        body {
-           -moz-transform: scale(0.5, 0.5);
-           zoom: 0.5;
-           zoom: 50%;
            /*background-color: black;*/
 		   
            text-align: center;
@@ -49,7 +45,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
   <label>
     Your email:
     <input type="text" name="_replyto">
-  </label>
+  </label><br>
   <label>
     Your message:
     <textarea name="message"></textarea>
