--- a/contact/index.html
+++ b/contact/index.html
@@ -45,7 +45,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
   <label>
     Your email:
     <input type="text" name="_replyto">
-  </label><br>
+  </label>
   <label>
     Your message:
     <textarea name="message"></textarea>
