--- a/contact/index.html
+++ b/contact/index.html
@@ -54,8 +54,8 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
   <!-- your other form fields go here -->
 
   <button type="submit">Send</button>
+	<p>test</p>
 </form>
 </div>
 </body>
 </html>
-/*Made By CheesyBC*/
