--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
       href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
 <title>Contact</title>
      <style>
+        body {
+           -moz-transform: scale(0.5, 0.5);
+           zoom: 0.5;
+           zoom: 50%;
            /*background-color: black;*/
 		   
            text-align: center;
@@ -38,7 +42,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 </head>
 <body>
 <div id="grad">
-<form
+	<form
   action="https://formspree.io/xrgyewrj"
   method="POST"
 >
@@ -50,12 +54,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
     Your message:
     <textarea name="message"></textarea>
   </label>
-
-  <!-- your other form fields go here -->
-
-  <button type="submit">Send</button>
-	<p>test</p>
-</form>
+	<button type="submit">Send</button>
 </div>
 </body>
 </html>
+
+
+
