--- a/contact/index.html
+++ b/contact/index.html
@@ -11,10 +11,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <title>Contact</title>
      <style>
         body {
-           -moz-transform: scale(0.5, 0.5);
+           <--moz-transform: scale(0.5, 0.5);
            zoom: 0.5;
            zoom: 50%;
-           /*background-color: black;*/
+           /*background-color: black;*/ -->
 		   
            text-align: center;
            color: white;
