--- a/contact/index.html
+++ b/contact/index.html
@@ -11,10 +11,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <title>Contact</title>
      <style>
         body {
-           <--moz-transform: scale(0.5, 0.5);
-           zoom: 0.5;
-           zoom: 50%;
-           /*background-color: black;*/ -->
+           -moz-transform: scale(1, 1);
+           zoom: 1;
+           zoom: 100%;
+           /*background-color: black;*/
 		   
            text-align: center;
            color: white;
@@ -38,9 +38,20 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 	   color:grey;
 	   }
 }
+
+.center{
+    position:absolute;
+    height: X px;
+    width: Y px;
+    left:50%;
+    top:50%;
+    margin-top:- X/2 px;
+    margin-left:- Y/2 px;
+}
     </style>
 </head>
 <body>
+<div class="center">
 <div id="grad">
 	<form
   action="https://formspree.io/xrgyewrj"
@@ -55,6 +66,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
     <textarea name="message"></textarea>
   </label>
 	<button type="submit">Send</button>
+</div>
 </div>
 </body>
 </html>
