--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 	<div class="mediumText">Play At: Raidmc.xyz</div>
 	<div class="mediumText">Latest Version</div>
 	 <button onclick="window.location.href = 'https://raidmc.xyz/apply/';"><div class="buttonText">Apply For Whitelist</div></button>
+	  <button onclick="window.location.href = 'https://raidmc.xyz/contact/';"><div class="buttonText">Contact A Admin</div></button>
 </div>
 </body>
 </html>
