--- a/apply/index.html
+++ b/apply/index.html
@@ -44,7 +44,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <div id="grad">
 	<div class="bigText">Apply For Whitelist</div>
 	<div class="mediumText">DM Me On Discord To Apply:</div>
-	<div class="mediumText">++(Nebula)++#0001 On Discord</div>
+	<div class="mediumText">++(Nebula)++#0001</div>
 	<img src="discordlogo.png" alt="discordlogo" class="center">
 </div>
 </body>
