--- a/Citadel/index.html
+++ b/Citadel/index.html
@@ -53,7 +53,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <body>
 <div class="center">
 <div id="grad">
-<div class=bigText>Thanks For Adding 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥 Bot!<div>
+<div id=bigText>Thanks For Adding 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥 Bot!<div>
 </div>
 </div>
 </body>
