--- a/Citadel/index.html
+++ b/Citadel/index.html
@@ -8,7 +8,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <link rel="icon" 
       type="image/png" 
       href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
-<title>Contact</title>
+<title>𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥</title>
      <style>
         body {
            -moz-transform: scale(1, 1);
@@ -53,7 +53,8 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <body>
 <div class="center">
 <div id="grad">
-<div id=bigText>Thanks For Adding 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥 Bot!<div>
+<div id=bigText>Welcome To 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥<div>
+	<div id=mediumText>Join The Discord Today<div>
 </div>
 </div>
 </body>
