--- a/Citadel/index.html
+++ b/Citadel/index.html
@@ -22,7 +22,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
        }
 	   #grad {
 	   height: 100%;
-       background: linear-gradient(to top right, #000066 0%, #ff99cc 100%)
+       background: linear-gradient(to top right, #000000 0%, ##790909 100%)
 	   }
 	   .bigText{
 	   font-size: 100px;
@@ -53,8 +53,8 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <body>
 <div class="center">
 <div id="grad">
-<div id=bigText>Welcome To 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥<div>
-	<div id=mediumText>Join The Discord Today<div>
+<div class=bigText>Welcome To 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥<div>
+	<div class=mediumText>Join The Discord Today<div>
 </div>
 </div>
 </body>
