--- a/Citadel/index.html
+++ b/Citadel/index.html
@@ -7,7 +7,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 </script>
 <link rel="icon" 
       type="image/png" 
-      href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg">
+      href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/Citadel/citadel.png">
 <title>𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥</title>
      <style>
         body {
@@ -22,7 +22,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
        }
 	   #grad {
 	   height: 100%;
-       background: linear-gradient(to top right, #000000 0%, ##790909 100%)
+       background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(121,9,9,1) 35%);
 	   }
 	   .bigText{
 	   font-size: 100px;
@@ -55,10 +55,8 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <div id="grad">
 <div class=bigText>Welcome To 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥<div>
 	<div class=mediumText>Join The Discord Today<div>
+</button> <button onclick="window.location.href = 'https://discord.gg/2sQFkds';"><div class="buttonText">Discord</div></button>
 </div>
 </div>
 </body>
 </html>
-
-
-
