--- a/Citadel/index.html
+++ b/Citadel/index.html
@@ -55,8 +55,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <div id="grad">
 <div class=bigText>Welcome To 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥<div>
 	<div class=mediumText>Join The Discord Today<div>
-</button> <button onclick="window.location.href = 'https://discord.gg/2sQFkds';"><div class="buttonText">Discord</div></button><br>
-		<img src="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/Citadel/citadel.png" alt="Citadel">
+</button> <button onclick="window.location.href = 'https://discord.gg/2sQFkds';"><div class="buttonText">Discord</div></button>
 </div>
 </div>
 </body>
