--- a/Citadel/index.html
+++ b/Citadel/index.html
@@ -55,8 +55,8 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <div id="grad">
 <div class=bigText>Welcome To 𝐓𝐡𝐞 𝐂𝐢𝐭𝐚𝐝𝐞𝐥<div>
 	<div class=mediumText>Join The Discord Today<div>
-</button> <button onclick="window.location.href = 'https://discord.gg/2sQFkds';"><div class="buttonText">Discord</div></button>
-		<iframe src="https://discordapp.com/widget?id=671557676697649172&theme=dark" width="650" height="800" allowtransparency="true" frameborder="0"></iframe>
+</button> <button onclick="window.location.href = 'https://discord.gg/2sQFkds';"><div class="buttonText">Discord</div></button><br><br>
+		<iframe src="https://discordapp.com/widget?id=671557676697649172&theme=dark" width="400" height="500" allowtransparency="true" frameborder="0"></iframe>
 </div>
 </div>
 </body>
