--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 </head>
 <body>
 <div id="grad">
-	<div class="bigText">Join The RaidMC SMP Network Today!</div>
+	<div class="bigText">Join The RaidMC MiniGames Network Today!</div>
 	<img src="Minecraft.jpg" alt="Minecraft" class="center">
 	<div class="mediumText">Play At: Raidmc.xyz</div>
-	<div class="mediumText">Latest Version</div>
-	  <button onclick="window.location.href = 'https://raidmc.xyz/contact/';"><div class="buttonText">Contact A Admin</div></button>
+	<div class="mediumText">1.8-1.16.1</div>
+	  <button onclick="window.location.href = 'https://raidmc.xyz/discord/';"><div class="buttonText">Discord</div></button>
+	<button onclick="window.location.href = 'https://store.raidmc.xyz';"><div class="buttonText">Store</div></button>
 </div>
 </body>
 </html>
