--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 	<img src="Minecraft.jpg" alt="Minecraft" class="center">
 	<div class="mediumText">Play At: Raidmc.xyz</div>
 	<div class="mediumText">1.8-1.16.1</div>
-	  <button onclick="window.location.href = 'https://raidmc.xyz/discord/';"><div class="buttonText">Discord</div></button>
+	  <button onclick="window.location.href = 'https://raidmc.xyz/discord';"><div class="buttonText">Discord</div></button>
 	<button onclick="window.location.href = 'https://store.raidmc.xyz';"><div class="buttonText">Store</div></button>
 </div>
 </body>
