--- a/panel/index.html
+++ b/panel/index.html
@@ -1,3 +1,5 @@
+<html> 
+<head>
 <style type="text/css">
 body {
    margin: 0;
@@ -11,7 +13,9 @@ body {
     height: 100%;
 }
 </style>
-
-<iframe id="RaidMCPanel" name="RaidMCPanel" frameborder="0"  
-     src="https://40.87.30.244"></iframe>  
+</head> 
+<body> 
+<iframe id="RaidMC" src="https://40.87.30.244" frameborder="0"></iframe>
+</body> 
+</html>  
 
