--- a/panel/index.html
+++ b/panel/index.html
@@ -1,21 +1,3 @@
-<html> 
-<head>
-<style type="text/css">
-body {
-   margin: 0;
-   overflow: hidden;
-}
-#iframe1 {
-    position:absolute;
-    left: 0px;
-    width: 100%;
-    top: 0px;
-    height: 100%;
-}
-</style>
-</head> 
-<body> 
-<iframe id="RaidMC" src="https://40.87.30.244" frameborder="0"></iframe>
-</body> 
-</html>  
-
+<body>
+    <iframe src="https://40.87.30.244" style="width:100%; height:100%;"></iframe>
+</body>
