--- a/panel/index.html
+++ b/panel/index.html
@@ -1,3 +1,4 @@
 <body>
     <iframe src="https://40.87.30.244" style="width:100%; height:100%;"></iframe>
+    <link rel="shortcut icon" type="image/jpg" href="https://raw.githubusercontent.com/CheesyBC/cheesybc.github.io/master/favicon.jpg"/>
 </body>
