--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 </head>
 <body>
 <div id="grad">
-	<div class="bigText">Join The RaidMC MiniGames Network Today!</div>
+	<div class="bigText">RaidMC Hosting Solutions</div>
 	<img src="Minecraft.jpg" alt="Minecraft" class="center">
 	<div class="mediumText">Play At: Raidmc.xyz</div>
-	<div class="mediumText">1.8-1.16.1</div>
+	<div class="mediumText">1.16.3</div>
 	  <button onclick="window.location.href = 'https://raidmc.xyz/discord';"><div class="buttonText">Discord</div></button>
 	<button onclick="window.location.href = 'http://raidmc-shop.tebex.io/';"><div class="buttonText">Store</div></button>
 </div>
