--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 <title>RaidMC</title>
      <style>
         body {
-           /*background-color: black;*/
+                     -moz-transform: scale(0.5, 0.5);
+           zoom: 0.5;
+           zoom: 50%;
+		
+		/*background-color: black;*/
 		   
            text-align: center;
            color: white;
