--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
 	<div class="mediumText">Play At: Raidmc.xyz</div>
 	<div class="mediumText">1.16.3</div>
 	  <button onclick="window.location.href = 'https://raidmc.xyz/discord';"><div class="buttonText">Discord</div></button>
-	<button onclick="window.location.href = 'http://raidmc-shop.tebex.io/';"><div class="buttonText">Store</div></button>
+	<button onclick="window.location.href = 'http://raidmc.xyz/contact';"><div class="buttonText">Contact</div></button>
 </div>
 </body>
 </html>
